<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ========================================================================
  ~     _             _     _ ____            _     _
  ~    / \   _ __ ___| |__ (_)  _ \ _ __ ___ (_) __| |
  ~   / _ \ | '__/ __| '_ \| | | | | '__/ _ \| |/ _` |
  ~  / ___ \| | | (__| | | | | |_| | | | (_) | | (_| |
  ~ /_/   \_\_|  \___|_| |_|_|____/|_|  \___/|_|\__,_|
  ~
  ~ Copyright 2014-2015 Łukasz "JustArchi" Domeradzki
  ~ Contact: JustArchi@JustArchi.net
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~ ========================================================================
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".Main$PlaceholderFragment">

	<TextView
		android:id="@+id/textRemoteBuildDate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/textRemoteVersion"
		android:layout_marginTop="5dp"
		android:layout_toStartOf="@+id/space"
		android:text="@string/textBuildDate"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<Spinner
		android:id="@+id/spinnerDownloadModes"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/buttonDownload"
		android:layout_alignParentStart="true"
		android:layout_alignTop="@+id/buttonDownload"
		android:layout_toStartOf="@+id/space"/>

	<Button
		android:id="@+id/buttonDownload"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_below="@+id/buttonUpdate"
		android:layout_marginTop="25dp"
		android:layout_toEndOf="@+id/space"
		android:enabled="false"
		android:text="@string/buttonDownload"/>

	<TextView
		android:id="@+id/textRemoteVariant"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/textRemoteBuildDate"
		android:layout_marginTop="5dp"
		android:layout_toStartOf="@+id/space"
		android:text="@string/textVersionType"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
		android:id="@+id/textCurrentRom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignStart="@+id/textCurrentVariant"
		android:layout_below="@+id/textCurrentVariant"
		android:layout_marginTop="5dp"
		android:layout_toStartOf="@+id/space"
		android:text="@string/textRom"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
		android:id="@+id/textRemoteDevice"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/textRemoteRom"
		android:layout_marginTop="5dp"
		android:layout_toStartOf="@+id/space"
		android:text="@string/textDevice"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<Space
		android:id="@+id/space"
		android:layout_width="20px"
		android:layout_height="20px"
		android:layout_alignParentBottom="true"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"/>

	<TextView
		android:id="@+id/textCurrentVariant"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_below="@+id/textCurrentBuildDate"
		android:layout_marginTop="5dp"
		android:layout_toEndOf="@+id/space"
		android:layout_toStartOf="@+id/space"
		android:text="@string/textVersionType"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
		android:id="@+id/textCurrent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignTop="@+id/textRemote"
		android:layout_toEndOf="@+id/space"
		android:layout_toStartOf="@+id/space"
		android:text="@string/textCurrent"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<TextView
		android:id="@+id/textCurrentBuildDate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_below="@+id/textCurrentVersion"
		android:layout_marginTop="5dp"
		android:layout_toEndOf="@+id/space"
		android:layout_toStartOf="@+id/space"
		android:text="@string/textBuildDate"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
		android:id="@+id/textCurrentDevice"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignStart="@+id/textCurrentRom"
		android:layout_below="@+id/textCurrentRom"
		android:layout_marginTop="5dp"
		android:layout_toStartOf="@+id/space"
		android:text="@string/textDevice"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
		android:id="@+id/textRemoteVersion"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/textRemote"
		android:layout_marginTop="10dp"
		android:layout_toStartOf="@+id/space"
		android:text="@string/textVersion"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
		android:id="@+id/textCurrentVersion"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_below="@+id/textCurrent"
		android:layout_marginTop="10dp"
		android:layout_toEndOf="@+id/textRemote"
		android:text="@string/textVersion"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
		android:id="@+id/textRemoteRom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/textRemoteVariant"
		android:layout_marginTop="5dp"
		android:layout_toStartOf="@+id/space"
		android:text="@string/textRom"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<Button
		android:id="@+id/buttonUpdate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_alignParentTop="true"
		android:layout_toEndOf="@+id/space"
		android:text="@string/buttonFetch"
		/>

	<TextView
		android:id="@+id/textRemote"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/spinnerDownloadModes"
		android:layout_marginTop="25dp"
		android:layout_toStartOf="@+id/textCurrent"
		android:text="@string/textRemote"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<Spinner
		android:id="@+id/spinnerBranches"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/buttonUpdate"
		android:layout_alignParentStart="true"
		android:layout_alignParentTop="true"
		android:layout_toStartOf="@+id/space"/>

</RelativeLayout>
